--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 感谢所有脚本作者，目前脚本总数：346个
 
+cron "*/30 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/jxcollect.js, enabled=true, tag=京喜工厂收电力（需单抓ck）
 cron "10 */1 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, enabled=true, tag=sunert中青签到&转盘宝箱&时长
 cron "10 */2 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/Youth_Read.js, enabled=true, tag=sunert中青自动阅读
 cron "30 6 * * *" script-path=https://raw.githubusercontent.com/ztxtop/x/main/youth_banner.js, enabled=true, tag=ztxtop中青看看赚&浏览赚
