--- a/.github/workflows/Python任务.yml
+++ b/.github/workflows/Python任务.yml
@@ -23,8 +23,8 @@ jobs:
         run: pip install -r workflow/requirements.txt
 
 
-      - name: '运行 【喜马拉雅极速版】'
-        run: python3 workflow/xmly_speed.py
+#      - name: '运行 【喜马拉雅极速版】'
+#        run: python3 workflow/xmly_speed.py
 
 
       - name: '运行 【中青极速版】'
