--- a/task/chenzhe.conf
+++ b/task/chenzhe.conf
@@ -1,5 +1,6 @@
 # 一堆Bug
 
+cron "5 1 23-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_grassy.js, enabled=true, tag=答题赢京
 cron "5 10 * 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mgold.js, enabled=true, tag=金口碑奖投
 cron "5 1,6,11,16,21 * 3-4 * " script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_super5g.js, enabled=true, tag=5G超级盲
 cron "11 12 17-30 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_oneplus.js, enabled=true, tag=一加盲盒
