--- a/task/chenzhe.conf
+++ b/task/chenzhe.conf
@@ -1,12 +1,11 @@
 # 一堆Bug
 
+cron "12 12 24-26 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_sister.js, enabled=true, tag=乘风破浪的姐
 cron "5 1 23-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_grassy.js, enabled=true, tag=答题赢京
-cron "5 10 * 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mgold.js, enabled=true, tag=金口碑奖投
 cron "5 1,6,11,16,21 * 3-4 * " script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_super5g.js, enabled=true, tag=5G超级盲
 cron "11 12 17-30 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_oneplus.js, enabled=true, tag=一加盲盒
 cron "5 8,14,20 17-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mother_jump.js, enabled=true, tag=母婴-跳一跳
 cron "12 15 15-29 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_lenovo.js, enabled=true, tag=联想集卡活动
-cron "10 10,15 13-20 3 * " script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_wish.js, enabled=true, tag=众筹许愿池
 cron "15 10 10-31 3 * " script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_unionPoster.js, enabled=true, tag=美的家电节
 cron "3 10 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_marketLottery.js, enabled=true, tag=京东超市-大转盘
 cron "3 10 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/jd_fanslove.js, enabled=true, tag=粉丝互动
