--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,14 +1,14 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
-cron "7 0-23 * * *" script-path=https://raw.githubusercontent.com/sngxpro/actionjd/ZIYE/Task/shuqi.js, enabled=true, tag=书旗小说ziye版
-cron "0 10,16,22 * * *" script-path=https://raw.githubusercontent.com/sngxpro/actionjd/ZIYE/Task/flw.js, enabled=true, tag=返利网
-cron "0,30 0-23 * * *" script-path=https://raw.githubusercontent.com/sngxpro/actionjd/ZIYE/Task/yuedongzu.js, enabled=true, tag=悦动族（查看阅读说明）
-cron "0,30 0-23 * * *" script-path=https://raw.githubusercontent.com/sngxpro/actionjd/ZIYE/Task/qmyd.js, enabled=true, tag=全民悦动(查看脚本下载)
-cron "0,30 0-23 * * *" script-path=https://raw.githubusercontent.com/sngxpro/actionjd/ZIYE/Task/bububao.js, enabled=true, tag=步步宝ziye版
-cron "0 * * * *" script-path=https://raw.githubusercontent.com/sngxpro/actionjd/ZIYE/Task/zhima.js, enabled=true, tag=芝嫲视频ziye版(查看脚本有用法)
-cron "0/15 1-6 * * *" script-path=https://raw.githubusercontent.com/sngxpro/actionjd/ZIYE/Task/xiaole.js, enabled=true, tag=小乐优券微信小程序
-cron "*/30 * * * *" script-path=https://raw.githubusercontent.com/sngxpro/actionjd/ZIYE/Task/iboxpay.js, enabled=true, tag=笑谱ziye版(查看脚本学用法，请挂全局用方法一)
+cron "7 0-23 * * *" script-path=https://cdn.js, enabled=true, tag=书旗小说ziye版
+cron "0 10,16,22 * * *" script-path=https://cdn.js, enabled=true, tag=返利网
+cron "0,30 0-23 * * *" script-path=https://cdn.js, enabled=true, tag=悦动族（查看阅读说明）
+cron "0,30 0-23 * * *" script-path=https://cdn.js, enabled=true, tag=全民悦动(查看脚本下载)
+cron "0,30 0-23 * * *" script-path=https://cdn.js, enabled=true, tag=步步宝ziye版
+cron "0 * * * *" script-path=https://cdn.js, enabled=true, tag=芝嫲视频ziye版(查看脚本有用法)
+cron "0/15 1-6 * * *" script-path=https://cdn.js, enabled=true, tag=小乐优券微信小程序
+cron "*/30 * * * *" script-path=https://cdn.js, enabled=true, tag=笑谱ziye版(查看脚本学用法，请挂全局用方法一)
 cron "5 1 23-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_grassy.js, enabled=true, tag=京东答题赢京豆
 cron "*/30 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/jxcollect.js, enabled=true, tag=京东京喜工厂收电力（需单抓ck）
 cron "10 */1 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, enabled=true, tag=sunert中青签到&转盘宝箱&时长
