--- a/.github/workflows/京东定时任务.yml
+++ b/.github/workflows/京东定时任务.yml
@@ -42,6 +42,12 @@ jobs:
           node jd_bean_sign.js
 
 
+      - name: '运行 【京豆变动】'
+        run: |
+          cd ~/TaskAction
+          node jd_bean_change.js
+
+
 #      - name: '运行 【京喜签到】'
 #        run: |
 #          cd ~/TaskAction
