--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "0 8 22-29 3 *" script-path=https://raw.githubusercontent.com/qqsdff/script/main/cart.js, enabled=true, tag=京东奇瑞新能源抽奖
 cron "12 12 24-26 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_sister.js, enabled=true, tag=京东乘风破浪的姐姐
 cron "7 0-23 * * *" script-path=https://cdn.js, enabled=true, tag=书旗小说ziye版
 cron "0 10,16,22 * * *" script-path=https://cdn.js, enabled=true, tag=返利网
