--- a/.github/workflows/京东循环任务.yml
+++ b/.github/workflows/京东循环任务.yml
@@ -13,6 +13,7 @@ jobs:
     env:
       TG_USER_ID: ${{ secrets.TG_USER_ID }}
       TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+      SCKEY: ${{ secrets.PUSH_KEY }}
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
