--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,19 +1,18 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "3 10 * * *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/jd_fanslove.js, enabled=true, tag=京东粉丝互动
+cron "10 10,11 * * 2-5" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/jd_entertainment.js, enabled=true, tag=京东百变大咖秀
+cron "3 10 * * *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_marketLottery.js, enabled=true, tag=京东超市-大转盘
+cron "5 1 23-25 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_grassy.js, enabled=true, tag=京东答题赢京豆
 cron "12 12 24-26 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_sister.js, enabled=true, tag=京东乘风破浪的姐姐
-cron "12 0 19-24 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_city_cash.js, enabled=true, tag=京东城城分现金（被助力很难）
 cron "12 15 15-29 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_lenovo.js, enabled=true, tag=京东联想集卡活动
 cron "5 1,6,11,16,21 * 3-4 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_super5g.js, enabled=true, tag=京东5G超级盲盒
-cron "5 10 * 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_mgold.js, enabled=true, tag=京东金口碑奖投票
 cron "11 12 17-30 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_oneplus.js, enabled=true, tag=京东一加盲盒
-cron "13 8,10 8-15 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_superDay.js, enabled=true, tag=京东洗护发超级品类日
 cron "15 10 10-31 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_unionPoster.js, enabled=true, tag=京东美的家电节
-cron "10 10,15 13-20 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_wish.js, enabled=true, tag=京东众筹许愿池
 cron "3 20 * * *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/jd_shake.js, enabled=true, tag=摇一摇
-cron "10 10 * * *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/jd_xmf.js, enabled=true, tag=京东小魔方
-cron "5 8,14,20 2-7 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/jd_jump_jump.js, enabled=true, tag=京东母婴-跳一跳二期
-cron "3 10 1 * *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/jd_shakeBean.js, enabled=true, tag=京东会员-摇京豆
+cron "10 10 25-27 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_xmf.js, enabled=true, tag=京东小魔方
+cron "5 8,14,20 25-31 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_mother_jump.js, enabled=true, tag=京东母婴-跳一跳二期
 cron "0 8 22-29 3 *" script-path=https://raw.githubusercontent.com/qqsdff/script/main/cart.js, enabled=true, tag=京东奇瑞新能源抽奖
 cron "7 0-23 * * *" script-path=https://cdn.js, enabled=true, tag=书旗小说ziye版
 cron "0 10,16,22 * * *" script-path=https://cdn.js, enabled=true, tag=返利网
