--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "0 * * * *" script-path=https://raw.githubusercontent.com/photonmang/quantumultX/master/58/58.js, enabled=true, tag=58同城(查看脚本学用法)
 cron "3 10 * * *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/jd_fanslove.js, enabled=true, tag=京东粉丝互动
 cron "10 10,11 * * 2-5" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/jd_entertainment.js, enabled=true, tag=京东百变大咖秀
 cron "3 10 * * *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_marketLottery.js, enabled=true, tag=京东超市-大转盘
@@ -39,7 +40,7 @@ cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/ma
 cron "*/6 * * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/SHUQI/shuqireadtime.js, enabled=true, tag=书旗小说姐姐刷时长
 cron "*/4 * * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/SHUQI/shuqi.js, enabled=true, tag=书旗小说姐姐版
 cron "15 7,15 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/mmjz.js, enabled=true, tag=喵喵记账
-cron "*/30 9-22 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/fqxs.js, enabled=true, 
+cron "*/30 9-22 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/fqxs.js, enabled=true, tag=番茄小说
 cron "*/30 8-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/cfz.js, enabled=true, tag=春风转
 cron "20 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xyzd.js, enabled=true, tag=幸运赚点
 cron "15 13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/hldsp.js, enabled=true, tag=哈喽短视频
@@ -48,7 +49,7 @@ cron "0 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-S
 cron "0 9 8-31 3 *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_global.js, enabled=true, tag=京东国际-环球挑战赛
 cron "0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_redpocke.js, enabled=true, tag=京东极速版红包
 cron "30 8 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxd.js, enabled=true, tag=京小兑
-cron "0 7 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/pyq.js, enabled=true, 
+cron "0 7 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/pyq.js, enabled=true, tag=评友圈
 cron "30 16 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txstockqx.js, enabled=true, tag=自选股
 cron "3,30 0 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txstockcow.js, enabled=true, tag=自选股长牛来了（看脚本手动加cookie订阅）
 cron "0 1 0 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/glados/checkin_env.js, enabled=true, tag=机场签到（配合boxjs使用）
