--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "5 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wcyd.js, enabled=true, tag=文创阅读
 cron "0 * * * *" script-path=https://raw.githubusercontent.com/photonmang/quantumultX/master/58/58.js, enabled=true, tag=58同城(查看脚本学用法)
 cron "3 10 * * *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/jd_fanslove.js, enabled=true, tag=京东粉丝互动
 cron "10 10,11 * * 2-5" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/jd_entertainment.js, enabled=true, tag=京东百变大咖秀
