--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "6 6 0-23 * * *" script-path=https://github.com/ziye888/JavaScript/raw/main/Task/jdtq.js, enabled=true, tag=简单天气
 cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/smz.js, enabled=true, tag=睡眠赚无限刷
 cron "10 8 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/zqwn.js, enabled=true, tag=最强蜗牛
 cron "10-15 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/lgyy.js, enabled=true, tag=朗果英语
