--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "0 0-18/6 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_carnivalcity.js, enabled=true, tag=京东手机狂欢城
 cron "30 10 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/yqzh.js, enabled=true, tag=悦趣阅读
 cron "0,30 8-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/hlyy.js, enabled=true, tag=葫芦音乐
 cron "6 6 0-23 * * *" script-path=https://github.com/ziye888/JavaScript/raw/main/Task/jdtq.js, enabled=true, tag=简单天气
