--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -9,7 +9,7 @@ cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/ma
 cron "10 8 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/zqwn.js, enabled=true, tag=最强蜗牛
 cron "10-15 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/lgyy.js, enabled=true, tag=朗果英语
 cron "20 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/ximei.js, enabled=true, tag=西梅
-cron "5 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wcyd.js, enabled=true, tag=文创阅读
+cron "0-59 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wcyd.js, enabled=true, tag=文创阅读
 cron "0 * * * *" script-path=https://raw.githubusercontent.com/photonmang/quantumultX/master/58/58.js, enabled=true, tag=58同城(查看脚本学用法)
 cron "3 10 * * *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/jd_fanslove.js, enabled=true, tag=京东粉丝互动
 cron "10 10,11 * * 2-5" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/jd_entertainment.js, enabled=true, tag=京东百变大咖秀
