--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -62,7 +62,7 @@ cron "0 7 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-S
 cron "30 16 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txstockqx.js, enabled=true, tag=自选股
 cron "3,30 0 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txstockcow.js, enabled=true, tag=自选股长牛来了（看脚本手动加cookie订阅）
 cron "0 1 0 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/glados/checkin_env.js, enabled=true, tag=机场签到（配合boxjs使用）
-cron "50 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/yggy.js, enabled=true, tag=阳光果园(需实名)
+cron "0 */1 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/yggy.js, enabled=true, tag=阳光果园(需实名)
 cron "3 10 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_marketLottery.js, enabled=true, tag=京东超市-大转盘
 cron "11 0 * * 1" script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_deleteCoupon.js, enabled=true, tag=京东删除优惠券
 cron "30 10 * * *" script-path=https://raw.githubusercontent.com/ZCY01/daily_scripts/main/jd/jd_try.js, enabled=true, tag=京东试用(取关200个店铺再用)
