--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,36 +2,38 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "* * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
-cron "5 1 23-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_grassy.js, enabled=true, tag=答题赢京豆
+cron "0 0-18/6 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_carnivalcity.js, enabled=true, tag=京东手机狂欢城
+cron "5 1 23-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_grassy.js, enabled=true, tag=❗答题赢京豆
 cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/66yd.js, enabled=true, tag=66阅读
-cron "12 0 19-24 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_city_cash.js, enabled=true, tag=城城分现金
-cron "5 10 * 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mgold.js, enabled=true, tag=金口碑奖投票
-cron "5 1,6,11,16,21 * 3-4 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_super5g.js, enabled=true, tag=5G超级盲盒
+cron "12 0 19-24 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_city_cash.js, enabled=true, tag=❗城城分现金
+cron "0 8 22-31/1 3 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_nzmh.js, enabled=true, tag=❗女装盲盒
+cron "5 10 * 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mgold.js, enabled=true, tag=❗金口碑奖投票
+cron "5 1,6,11,16,21 * 3-4 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_super5g.js, enabled=true, tag=❗5G超级盲盒
 cron "0 9 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zhiyi/ygkc.js, enabled=true, tag=阳光矿场
 cron "*/20 8-23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/iboxpay.js, enabled=true, tag=笑谱（ziye）
-cron "11 12 17-30 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_oneplus.js, enabled=true, tag=一加盲盒
-cron "5 8,14,20 17-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mother_jump.js, enabled=true, tag=母婴-跳一跳
-cron "12 15 15-29 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_lenovo.js, enabled=true, tag=联想集卡活动
+cron "11 12 17-30 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_oneplus.js, enabled=true, tag=❗一加盲盒
+cron "5 8,14,20 17-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mother_jump.js, enabled=true, tag=❗母婴-跳一跳
+cron "12 15 15-29 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_lenovo.js, enabled=true, tag=❗联想集卡活动
 cron "0 0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/activity/jd_xtg.js, enabled=true, tag=手机尚学季
 cron "0,1,2 0 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Jd/jd_cash_exchange.js, enabled=true, tag=领现金兑换红包
 cron "13 8,10 8-15 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_superDay.js, enabled=true, tag=京东洗护发超级品类日
-cron "10 10,15 13-20 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_wish.js, enabled=true, tag=京东众筹许愿池
+cron "10 10,15 13-20 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_wish.js, enabled=true, tag=❗京东众筹许愿池
 cron "10-20/5 12 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_live.js, enabled=true, tag=京东直播
 cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wkzz.js, enabled=true, tag=微客众智
 cron "7 0-23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/shuqi.js, enabled=true, tag=书旗小说
-cron " 10 10 16-18 * *  " script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/jd_xmf.js, enabled=true, tag= 京东小魔方
+cron " 10 10 16-18 * *  " script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/jd_xmf.js, enabled=true, tag=❗京东小魔方
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/fqxs.js, enabled=true, tag=番茄小说
 cron "*/30 8-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/cfz.js, enabled=true, tag=春风转
-cron "15 10 26-31 2,3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_unionPoster.js, enabled=true, tag=美的家电节
+cron "15 10 26-31 2,3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_unionPoster.js, enabled=true, tag=❗美的家电节
 cron "15 13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/hldsp.js, enabled=true, tag=哈喽短视频
 cron "20 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xyzd.js, enabled=true, tag=幸运赚点
 cron "13 8,10 8-15 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_superDay.js, enabled=true, tag=超级品类日
 cron "30,31 20-23/1 9,12 3 *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_live_redrain.js, enabled=true, tag=超级直播间红包雨
 cron "15 7,15 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Jd/jd_cash_reward.js, enabled=true, tag=领现金自动获得酬劳
-cron "0 9 8-31 3 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_global.js, enabled=true, tag=环球挑战赛
+cron "0 9 8-31 3 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_global.js, enabled=true, tag=❗环球挑战赛
 cron "30 8 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jxd.js, enabled=true, tag=京小兑
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/pyq.js, enabled=true, tag=评有圈
-cron "3 10 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_marketLottery.js, enabled=true, tag=京东超市-大转盘
+cron "3 10 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_marketLottery.js, enabled=true, tag=❗京东超市-大转盘
 cron "50 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/yggy.js, enabled=true, tag=阳光果园
 cron "0,30 0-23 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/ZIYE/Task/qmyd.js, enabled=true, tag=全民悦动
 cron "15 0,6,12,18, * * *" script-path=https://raw.githubusercontent.com/age174/-/main/ddxq.js, enabled=true, tag=嘀嗒星球
@@ -48,7 +50,7 @@ cron "15 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/y
 cron "30 18 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jd_zjd.js, enabled=true, tag=半自动领京豆
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/58xinian/Surge/master/Script/huke.js, enabled=true, tag=虎课网
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/jddj.js, enabled=true, tag=京东到家
-cron "3 20 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/jd_shake.js, enabled=true, tag=摇一摇
+cron "3 20 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/jd_shake.js, enabled=true, tag=❗摇一摇
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/wechatsubs/wechatsubs.js, enabled=true, tag=公众号监控
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/klcw/klcw-app.js, enabled=true, tag=酷乐潮玩App
 cron "*/10 */2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jukan.js, enabled=true, tag=聚看点
@@ -62,7 +64,7 @@ cron "0 9,12,20,21 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_g
 cron "20 5 10 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth_gain.js, enabled=true, tag=中青浏览赚
 cron "*/10 5-23 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, enabled=true, tag= 中青签到&转盘宝箱
 cron "10 */2 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/Youth_Read.js, enabled=true, tag=中青自动阅读
-cron "0 0-23/2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/ZIYE/Task/xiaole.js, enabled=true, tag=微信小乐优券
+cron "0/15 1-6 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/ZIYE/Task/xiaole.js, enabled=true, tag=微信小乐优券
 cron "15 12,14,16,20 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/fqkk.js, enabled=true, tag=番茄看看
 cron "*/10 * * * *" script-path=https://raw.githubusercontent.com/age174/-/main/sz.js, enabled=true, tag=闪挣
 cron "15,45 10-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wnb.js, enabled=true, tag=蜗牛吧
