--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,9 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "10 10 4-6 4 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/i-chenzhe/z_xmf.js, enabled=true, tag=京东小魔方
+cron "15 08 2-18 4 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/car/monk_skyworth_car.js, enabled=true, tag=京东创维全勤奖(加购)
+cron "5 8,14,20 6-13 4 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/i-chenzhe/z_mother_jump.js, enabled=true, tag=京东母婴-跳一跳二期
 cron "10 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wcxcx.js, enabled=true, tag=文创阅读小程序
 cron "0-59 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wcyd.js, enabled=true, tag=文创阅读
 cron "0 0-18/6 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_carnivalcity.js, enabled=true, tag=京东手机狂欢城
@@ -22,8 +25,6 @@ cron "5 1,6,11,16,21 * 3-4 *" script-path=https://raw.githubusercontent.com/sngx
 cron "11 12 17-30 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_oneplus.js, enabled=true, tag=京东一加盲盒
 cron "15 10 10-31 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_unionPoster.js, enabled=true, tag=京东美的家电节
 cron "3 20 * * *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/jd_shake.js, enabled=true, tag=摇一摇
-cron "10 10 25-27 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_xmf.js, enabled=true, tag=京东小魔方
-cron "5 8,14,20 25-31 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_mother_jump.js, enabled=true, tag=京东母婴-跳一跳二期
 cron "0 8 22-29 3 *" script-path=https://raw.githubusercontent.com/qqsdff/script/main/cart.js, enabled=true, tag=京东奇瑞新能源抽奖
 cron "7 0-23 * * *" script-path=https://cdn.js, enabled=true, tag=书旗小说ziye版
 cron "0 10,16,22 * * *" script-path=https://cdn.js, enabled=true, tag=返利网
