--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -6,7 +6,7 @@ cron "0 0-18/6 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/
 cron "5 1 23-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_grassy.js, enabled=true, tag=❗答题赢京豆
 cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/66yd.js, enabled=true, tag=66阅读
 cron "12 0 19-24 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_city_cash.js, enabled=true, tag=❗城城分现金
-cron "0 8 22-31/1 3 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_nzmh.js, enabled=true, tag=❗女装盲盒
+cron "0 8 1-31/1 4 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_nzmh.js, enabled=true, tag=女装盲盒
 cron "5 10 * 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mgold.js, enabled=true, tag=❗金口碑奖投票
 cron "5 1,6,11,16,21 * 3-4 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_super5g.js, enabled=true, tag=❗5G超级盲盒
 cron "0 9 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zhiyi/ygkc.js, enabled=true, tag=阳光矿场
