--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,15 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "* * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
+cron "0-59 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wcyd.js, enabled=true, tag=文创阅读
+cron "20 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/ximei.js, enabled=true, tag=西梅
+cron "10-15 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/lgyy.js, enabled=true, tag=朗果英语
+cron "10 8 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/zqwn.js, enabled=true, tag=最强蜗牛
+cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/smz.js, enabled=true, 
+cron "0,30 8-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/hlyy.js, enabled=true, tag=葫芦音乐
+cron "30 10 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/yqzh.js, enabled=true, tag=悦趣阅读
+cron "10 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wcxcx.js, enabled=true, tag=文创阅读小程序
+cron "15 08 2-18 4 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/car/monk_skyworth_car.js, enabled=true, 
 cron "0 0-18/6 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_carnivalcity.js, enabled=true, tag=京东手机狂欢城
 cron "5 1 23-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_grassy.js, enabled=true, tag=❗答题赢京豆
 cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/66yd.js, enabled=true, tag=66阅读
@@ -34,7 +43,7 @@ cron "0 9 8-31 3 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd
 cron "30 8 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jxd.js, enabled=true, tag=京小兑
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/pyq.js, enabled=true, tag=评有圈
 cron "3 10 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_marketLottery.js, enabled=true, tag=❗京东超市-大转盘
-cron "50 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/yggy.js, enabled=true, tag=阳光果园
+cron "0 */1 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/yggy.js, enabled=true, tag=阳光果园
 cron "0,30 0-23 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/ZIYE/Task/qmyd.js, enabled=true, tag=全民悦动
 cron "15 0,6,12,18, * * *" script-path=https://raw.githubusercontent.com/age174/-/main/ddxq.js, enabled=true, tag=嘀嗒星球
 cron "15 0,6,12,18, * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xsmm.js, enabled=true, tag=悬赏喵喵
@@ -109,7 +118,6 @@ cron "0 10 0 * * *" script-path=https://raw.githubusercontent.com/XidNDD/2020scr
 cron "5 8 * * *" script-path=https://raw.githubusercontent.com/iisams/Scripts/master/liwo/jdtqz.js, enabled=true, tag= 京东特权值
 cron "1 7 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_wechat_sign.js, enabled=true, tag=京东粉丝专享
 cron "30 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_gyec.js, enabled=true, tag=工业品爱消除
-cron "55 23 * * 6" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_unbind.js, enabled=true, tag=注销京东会员卡
 cron "0 30 2 1,10,20 * ?" script-path=https://gitee.com/qq34347476/quantumult-x/raw/master/get_share_jd_code.js, enabled=true, tag=获取并提交hz码
 cron "1 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_family.js, enabled=true, tag=京东家庭号
 cron "0 2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_price.js, enabled=true, tag=京东保价
