--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -60,7 +60,7 @@ cron "15 13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/h
 cron "30,31 20-23/1 9,12 3 *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_live_redrain.js, enabled=true, tag=超级直播间红包雨临时活动
 cron "0 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/hotsoon_old.js, enabled=true, tag=火山小视频极速版
 cron "0 9 8-31 3 *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_global.js, enabled=true, tag=京东国际-环球挑战赛
-cron "0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_redpocke.js, enabled=true, tag=京东极速版红包
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/wuzhi03/MyActions/main/jd_speed_redpocke.js, enabled=true, tag=京东极速版红包
 cron "30 8 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxd.js, enabled=true, tag=京小兑
 cron "0 7 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/pyq.js, enabled=true, tag=评友圈
 cron "30 16 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txstockqx.js, enabled=true, tag=自选股
@@ -86,7 +86,7 @@ cron "15 12,14,16,20,22 * * *" script-path=https://raw.githubusercontent.com/age
 cron "30 8,13,19 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_cfd.js, enabled=true, tag=京喜财富岛(改)
 cron "15 12,14,16,20 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/dka.js, enabled=true, tag=蛋咖
 cron "0 */10 * * * ?" script-path=https://pan.meitudou.cn/Task/QQread.js, enabled=true, tag=QQ阅读
-cron "0 0 * * *" script-path=https://raw.githubusercontent.com/wuzhi01/MyActions/main/jx_cfdtx.js, enabled=true, tag=京喜财富岛提现
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/wuzhi03/MyActions/main/jx_cfdtx.js, enabled=true, tag=京喜财富岛提现
 cron "30 6,12,22 * * *" script-path=https://raw.githubusercontent.com/moposmall/Script/main/Me/jx_cfd_exchange.js, enabled=true, tag=京喜财富岛兑换提醒
 cron "5,35 8-23 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/jrtt.js, enabled=true, tag=今日头条极速版
 cron "0 */30 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/hotsoon.js, enabled=true, tag=火山视频极速版
