--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "* * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
+cron "0 9,13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/lhws.js, enabled=true, tag=落花无生
 cron "15 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/vsh.js, enabled=true, tag=V生活
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/photonmang/quantumultX/master/Task/zyb.js, enabled=true, tag=作业帮签到
 cron "0-59 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wcyd.js, enabled=true, tag=文创阅读
