--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,9 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "1 0,9,11,13,15,17,19,20,21,23 * 4-6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/backup/red_rain.js, enabled=true, tag=京东自抓直播雨（配合重写每日获取）
+cron "1 8-23 * * *" script-path=https://raw.githubusercontent.com/sngxpro2/jdliveredrain/main/lxk0301_live_redrain.js, enabled=true, tag=京东每日红包雨（由我代管随缘维护）
+cron "0 9,13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/lhws.js, enabled=true, tag=落花无生
 cron "15 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/vsh.js, enabled=true, tag=V生活
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/photonmang/quantumultX/master/Task/zyb.js, enabled=true, tag=作业帮签到
 cron "10 10 7-9 4 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/i-chenzhe/z_xmf.js, enabled=true, tag=京东小魔方
