--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "0-59 9,12,22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/shq.js, enabled=true, tag=生活圈
 cron "1 0,9,11,13,15,17,19,20,21,23 * 4-6 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/backup/get_red_rain.js, enabled=true, tag=京东自抓直播雨（配合重写每日获取）
 cron "1 8-23 * * *" script-path=https://raw.githubusercontent.com/sngxpro2/jdliveredrain/main/lxk0301_live_redrain.js, enabled=true, tag=京东每日红包雨（由我代管随缘维护）
 cron "0 9,13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/lhws.js, enabled=true, tag=落花无生
@@ -39,7 +40,6 @@ cron "0,30 0-23 * * *" script-path=https://cdn.js, enabled=true, tag=步步宝zi
 cron "0 * * * *" script-path=https://cdn.js, enabled=true, tag=芝嫲视频ziye版(查看脚本有用法)
 cron "0/15 1-6 * * *" script-path=https://cdn.js, enabled=true, tag=小乐优券微信小程序
 cron "*/30 * * * *" script-path=https://cdn.js, enabled=true, tag=笑谱ziye版(查看脚本学用法，请挂全局用方法一)
-cron "5 1 23-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_grassy.js, enabled=true, tag=京东答题赢京豆
 cron "*/30 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/jxcollect.js, enabled=true, tag=京东京喜工厂收电力（需单抓ck）
 cron "10 */1 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, enabled=true, tag=sunert中青签到&转盘宝箱&时长
 cron "10 */2 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/Youth_Read.js, enabled=true, tag=sunert中青自动阅读
