--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "* * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
+cron "0-59 9,12,22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/shq.js, enabled=true, tag=生活圈
 cron "0 9,13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/lhws.js, enabled=true, tag=落花无生
 cron "15 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/vsh.js, enabled=true, tag=V生活
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/photonmang/quantumultX/master/Task/zyb.js, enabled=true, tag=作业帮签到
@@ -22,6 +23,7 @@ cron "0 8 1-31/1 4 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/
 cron "5 10 * 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mgold.js, enabled=true, tag=❗金口碑奖投票
 cron "5 1,6,11,16,21 * 3-4 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_super5g.js, enabled=true, tag=❗5G超级盲盒
 cron "0 9 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zhiyi/ygkc.js, enabled=true, tag=阳光矿场
+cron "12 12 24-26 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_sister.js, enabled=true, tag=❗乘风破浪的姐姐
 cron "*/20 8-23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/iboxpay.js, enabled=true, tag=笑谱（ziye）
 cron "11 12 17-30 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_oneplus.js, enabled=true, tag=❗一加盲盒
 cron "5 8,14,20 17-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mother_jump.js, enabled=true, tag=❗母婴-跳一跳
