--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -7,7 +7,7 @@ cron "1 8-23 * * *" script-path=https://raw.githubusercontent.com/sngxpro2/jdliv
 cron "0 9,13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/lhws.js, enabled=true, tag=落花无生
 cron "15 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/vsh.js, enabled=true, tag=V生活
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/photonmang/quantumultX/master/Task/zyb.js, enabled=true, tag=作业帮签到
-cron "10 10 7-9 4 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/i-chenzhe/z_xmf.js, enabled=true, tag=京东小魔方
+cron "10 10 10-12 * *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/i-chenzhe/z_xmf.js, enabled=true, tag=京东小魔方
 cron "15 08 2-18 4 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/car/monk_skyworth_car.js, enabled=true, tag=京东创维全勤奖(加购)
 cron "5 8,14,20 6-13 4 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/i-chenzhe/z_mother_jump.js, enabled=true, tag=京东母婴-跳一跳二期
 cron "10 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wcxcx.js, enabled=true, tag=文创阅读小程序
