--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,10 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/pxx.js, enabled=true, tag=拼夕夕
+cron "0 0/30 * * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/keepjs.js, enabled=true, tag=keep小程序浇水
+cron "0 6 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/keepdk.js, enabled=true, tag=keep小程序打卡偷能量
+cron "0 0/10 * * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/qkyl.js, enabled=true, tag=趣客有礼
 cron "0-59 9,12,22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/shq.js, enabled=true, tag=生活圈
 cron "1 0,9,11,13,15,17,19,20,21,23 * 4-6 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/backup/get_red_rain.js, enabled=true, tag=京东自抓直播雨（配合重写每日获取）
 cron "1 8-23 * * *" script-path=https://raw.githubusercontent.com/sngxpro2/jdliveredrain/main/lxk0301_live_redrain.js, enabled=true, tag=京东每日红包雨（由我代管随缘维护）
@@ -242,7 +246,6 @@ cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/script
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/qqmusic/qqmusic.js, enabled=true, tag=QQ音乐
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/qtt/qtt.js, enabled=true, tag=趣头条
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/qunar/qunar.js, enabled=true, tag=去哪儿
-cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.js, enabled=true, tag=人人视频
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/sfexpress/sfexpress.js, enabled=true, tag=顺丰速运
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/smzdm/quanx/smzdm.js, enabled=true, tag=什么值得买
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/suning/suning.js, enabled=true, tag=苏宁易购
