--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,7 +2,10 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "* * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
-cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/pxx.js, enabled=true, 
+cron "0 0/30 * * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/keepjs.js, enabled=true, tag=keep小程序浇水豆
+cron "0 6 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/keepdk.js, enabled=true, tag=keep小程序打卡偷能量
+cron "0 0/10 * * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/qkyl.js, enabled=true, tag=趣客有礼
+cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/pxx.js, enabled=true, tag=拼夕夕
 cron "0-59 9,12,22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/shq.js, enabled=true, tag=生活圈
 cron "0 9,13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/lhws.js, enabled=true, tag=落花无生
 cron "15 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/vsh.js, enabled=true, tag=V生活
@@ -17,38 +20,38 @@ cron "30 10 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/y
 cron "10 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wcxcx.js, enabled=true, tag=文创阅读小程序
 cron "15 08 2-18 4 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/car/monk_skyworth_car.js, enabled=true, 
 cron "0 0-18/6 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_carnivalcity.js, enabled=true, tag=京东手机狂欢城
-cron "5 1 23-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_grassy.js, enabled=true, tag=❗答题赢京豆
+cron "5 1 23-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_grassy.js, enabled=true, tag=⚠️答题赢京豆
 cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/66yd.js, enabled=true, tag=66阅读
-cron "12 0 19-24 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_city_cash.js, enabled=true, tag=❗城城分现金
+cron "12 0 19-24 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_city_cash.js, enabled=true, tag=⚠️城城分现金
 cron "0 8 1-31/1 4 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_nzmh.js, enabled=true, tag=女装盲盒
-cron "5 10 * 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mgold.js, enabled=true, tag=❗金口碑奖投票
-cron "5 1,6,11,16,21 * 3-4 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_super5g.js, enabled=true, tag=❗5G超级盲盒
+cron "5 10 * 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mgold.js, enabled=true, tag=⚠️金口碑奖投票
+cron "5 1,6,11,16,21 * 3-4 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_super5g.js, enabled=true, tag=⚠️5G超级盲盒
 cron "0 9 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zhiyi/ygkc.js, enabled=true, tag=阳光矿场
-cron "12 12 24-26 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_sister.js, enabled=true, tag=❗乘风破浪的姐姐
+cron "12 12 24-26 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_sister.js, enabled=true, tag=⚠️乘风破浪的姐姐
 cron "*/20 8-23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/iboxpay.js, enabled=true, tag=笑谱（ziye）
-cron "11 12 17-30 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_oneplus.js, enabled=true, tag=❗一加盲盒
-cron "5 8,14,20 17-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mother_jump.js, enabled=true, tag=❗母婴-跳一跳
-cron "12 15 15-29 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_lenovo.js, enabled=true, tag=❗联想集卡活动
+cron "11 12 17-30 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_oneplus.js, enabled=true, tag=⚠️一加盲盒
+cron "5 8,14,20 17-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mother_jump.js, enabled=true, tag=⚠️母婴-跳一跳
+cron "12 15 15-29 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_lenovo.js, enabled=true, tag=⚠️联想集卡活动
 cron "0 0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/activity/jd_xtg.js, enabled=true, tag=手机尚学季
 cron "0,1,2 0 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Jd/jd_cash_exchange.js, enabled=true, tag=领现金兑换红包
 cron "13 8,10 8-15 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_superDay.js, enabled=true, tag=京东洗护发超级品类日
-cron "10 10,15 13-20 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_wish.js, enabled=true, tag=❗京东众筹许愿池
+cron "10 10,15 13-20 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_wish.js, enabled=true, tag=⚠️京东众筹许愿池
 cron "10-20/5 12 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_live.js, enabled=true, tag=京东直播
 cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wkzz.js, enabled=true, tag=微客众智
 cron "7 0-23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/shuqi.js, enabled=true, tag=书旗小说
 cron " 10 10 16-18 * *  " script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/jd_xmf.js, enabled=true, tag=京东小魔方
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/fqxs.js, enabled=true, tag=番茄小说
 cron "*/30 8-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/cfz.js, enabled=true, tag=春风转
-cron "15 10 26-31 2,3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_unionPoster.js, enabled=true, tag=❗美的家电节
+cron "15 10 26-31 2,3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_unionPoster.js, enabled=true, tag=⚠️美的家电节
 cron "15 13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/hldsp.js, enabled=true, tag=哈喽短视频
 cron "20 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xyzd.js, enabled=true, tag=幸运赚点
 cron "13 8,10 8-15 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_superDay.js, enabled=true, tag=超级品类日
 cron "30,31 20-23/1 9,12 3 *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_live_redrain.js, enabled=true, tag=超级直播间红包雨
 cron "15 7,15 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Jd/jd_cash_reward.js, enabled=true, tag=领现金自动获得酬劳
-cron "0 9 8-31 3 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_global.js, enabled=true, tag=❗环球挑战赛
+cron "0 9 8-31 3 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_global.js, enabled=true, tag=⚠️环球挑战赛
 cron "30 8 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jxd.js, enabled=true, tag=京小兑
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/pyq.js, enabled=true, tag=评有圈
-cron "3 10 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_marketLottery.js, enabled=true, tag=❗京东超市-大转盘
+cron "3 10 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_marketLottery.js, enabled=true, tag=⚠️京东超市-大转盘
 cron "0 */1 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/yggy.js, enabled=true, tag=阳光果园
 cron "0,30 0-23 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/ZIYE/Task/qmyd.js, enabled=true, tag=全民悦动
 cron "15 0,6,12,18, * * *" script-path=https://raw.githubusercontent.com/age174/-/main/ddxq.js, enabled=true, tag=嘀嗒星球
@@ -65,7 +68,7 @@ cron "15 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/y
 cron "30 18 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jd_zjd.js, enabled=true, tag=半自动领京豆
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/58xinian/Surge/master/Script/huke.js, enabled=true, tag=虎课网
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/jddj.js, enabled=true, tag=京东到家
-cron "3 20 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/jd_shake.js, enabled=true, tag=❗摇一摇
+cron "3 20 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/jd_shake.js, enabled=true, tag=⚠️摇一摇
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/wechatsubs/wechatsubs.js, enabled=true, tag=公众号监控
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/klcw/klcw-app.js, enabled=true, tag=酷乐潮玩App
 cron "*/10 */2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jukan.js, enabled=true, tag=聚看点
