--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,8 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/age174/-/main/mmdzz.js, enabled=true, tag=萌喵大作战无限刷
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/ehy.js, enabled=true, tag=钢镚赚乐步达人二合一
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/pxx.js, enabled=true, tag=拼夕夕
 cron "0 0/30 * * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/keepjs.js, enabled=true, tag=keep小程序浇水
 cron "0 6 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/keepdk.js, enabled=true, tag=keep小程序打卡偷能量
