--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,7 +2,14 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "* * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
+cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/age174/-/main/mmdzz.js, enabled=true, tag=萌喵大作战无限刷
+cron "*/4 * * * *" script-path=https://raw.githubusercontent.com/qqsdff/script/main/xsyx.js, enabled=true, tag=兴盛优选小程序
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/ehy.js, enabled=true, tag=钢镚赚乐步达人二合一
+cron "0 0 0/2 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/jfz.js, enabled=true, tag=积分赚挖矿
+cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/nmm.js, enabled=true, tag=牛蒙蒙
+cron "0 7 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/pahcz.js, enabled=true, tag=平安好车主
 cron "0 0/30 * * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/keepjs.js, enabled=true, tag=keep小程序浇水豆
+cron "15 08 2-18 4 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/car/monk_skyworth_car.js, enabled=true, tag=京东创维全勤奖(加购)
 cron "0 6 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/keepdk.js, enabled=true, tag=keep小程序打卡偷能量
 cron "0 0/10 * * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/qkyl.js, enabled=true, tag=趣客有礼
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/pxx.js, enabled=true, tag=拼夕夕
@@ -14,11 +21,10 @@ cron "0-59 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/ma
 cron "20 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/ximei.js, enabled=true, tag=西梅
 cron "10-15 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/lgyy.js, enabled=true, tag=朗果英语
 cron "10 8 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/zqwn.js, enabled=true, tag=最强蜗牛
-cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/smz.js, enabled=true, 
+cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/smz.js, enabled=true, tag=睡眠赚无限刷
 cron "0,30 8-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/hlyy.js, enabled=true, tag=葫芦音乐
 cron "30 10 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/yqzh.js, enabled=true, tag=悦趣阅读
 cron "10 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wcxcx.js, enabled=true, tag=文创阅读小程序
-cron "15 08 2-18 4 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/car/monk_skyworth_car.js, enabled=true, 
 cron "0 0-18/6 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_carnivalcity.js, enabled=true, tag=京东手机狂欢城
 cron "5 1 23-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_grassy.js, enabled=true, tag=⚠️答题赢京豆
 cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/66yd.js, enabled=true, tag=66阅读
