--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "* * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
+cron "0 0,1-23/3 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_mohe.js, enabled=true, tag=5G超级盲盒
 cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/age174/-/main/mmdzz.js, enabled=true, tag=萌喵大作战无限刷
 cron "*/4 * * * *" script-path=https://raw.githubusercontent.com/qqsdff/script/main/xsyx.js, enabled=true, tag=兴盛优选小程序
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/ehy.js, enabled=true, tag=钢镚赚乐步达人二合一
@@ -31,7 +32,6 @@ cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/ma
 cron "12 0 19-24 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_city_cash.js, enabled=true, tag=⚠️城城分现金
 cron "0 8 1-31/1 4 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_nzmh.js, enabled=true, tag=女装盲盒
 cron "5 10 * 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mgold.js, enabled=true, tag=⚠️金口碑奖投票
-cron "5 1,6,11,16,21 * 3-4 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_super5g.js, enabled=true, tag=⚠️5G超级盲盒
 cron "0 9 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zhiyi/ygkc.js, enabled=true, tag=阳光矿场
 cron "12 12 24-26 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_sister.js, enabled=true, tag=⚠️乘风破浪的姐姐
 cron "*/20 8-23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/iboxpay.js, enabled=true, tag=笑谱（ziye）
