--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "1 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/blnc.js, enabled=true, tag=部落农场
 cron "*/4 * * * *" script-path=https://raw.githubusercontent.com/qqsdff/script/main/xsyx.js, enabled=true, tag=兴盛优选小程序
 cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/age174/-/main/mmdzz.js, enabled=true, tag=萌喵大作战无限刷
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/ehy.js, enabled=true, tag=钢镚赚乐步达人二合一
