--- a/rule/ssr_ml.conf
+++ b/rule/ssr_ml.conf
@@ -23,6 +23,7 @@ RULE-SET,https://raw.githubusercontent.com/pxylen/abc_/master/rule/loon_proxy.li
 # 广告拦截
 RULE-SET,https://anti-ad.net/surge.txt,REJECT
 RULE-SET,https://raw.githubusercontent.com/pxylen/abc_/master/rule/loon_reject.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/AdvertisingTest/AdvertisingTest.list,REJECT
 
 
 # 外国规则
