--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -7,6 +7,7 @@ cron "1 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/bln
 cron "0 0,1-23/3 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_mohe.js, enabled=true, tag=5G超级盲盒
 cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/age174/-/main/mmdzz.js, enabled=true, tag=萌喵大作战无限刷
 cron "*/4 * * * *" script-path=https://raw.githubusercontent.com/qqsdff/script/main/xsyx.js, enabled=true, tag=兴盛优选小程序
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/LJJJia/script/master/iklear/iklear_checkin.js, enabled=true, tag=iklear签到
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/ehy.js, enabled=true, tag=钢镚赚乐步达人二合一
 cron "0 0 0/2 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/jfz.js, enabled=true, tag=积分赚挖矿
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/nmm.js, enabled=true, tag=牛蒙蒙
